--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,17 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
   repositories {
-    mavenCentral()
+    google()
+    jcenter()
   }
-
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.2'
+    classpath 'com.android.tools.build:gradle:3.5.1'
   }
-}
-
-def isReleaseBuild() {
-  return version.contains("SNAPSHOT") == false
 }
 
 allprojects {
-  version = VERSION_NAME
-    group = GROUP
-
-    repositories {
-      mavenCentral()
-    }
-}
-
-task wrapper(type: Wrapper) {
-  gradleVersion = '2.13'
-  distributionUrl = "https://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
+  repositories {
+    google()
+    jcenter()
+    maven { url "https://jitpack.io" }
+  }
 }
