--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,21 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.3"
+  compileSdkVersion 29
+  buildToolsVersion '29.0.2'
 
   lintOptions {
     abortOnError false
   }
 
   defaultConfig {
-    minSdkVersion 11
-    targetSdkVersion 23
+    minSdkVersion 14
+    targetSdkVersion 29
   }
 }
 
 dependencies {
-  compile 'com.android.support:support-v4:23.4.0'
-  compile 'com.android.support:appcompat-v7:23.4.0'
-  compile project(':library')
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation project(':library')
 }
